ipc/ipdl/test/ipdl/error/undefSelfRecUnion.ipdl
union X { X; };

protocol undefSelfRecUnion {
child: __delete__(X x);
};
